# hdfmap

./: .gitignore  README.md  catalog-info.yaml  check_files.py  main.py  mkdocs.yml  pyproject.toml  requires.txt
.github/workflows/: docs.yml  tests.yml
docs/: code_description.md  index.md  installation.md  requirements.txt
docs/description/: eval_functions.md  file_functions.md  hdf_loader.md  hdfmap.md  hdfmap_class_HdfMap.md  how-it-works.md  index.md  nexus.md  nexus_NexusMap.md  reloader_class.md
docs/installation/: index.md
docs/usage/: examples.md  index.md  utilities.md
examples/: check_files.py  eval_performance_time.py  example_eval_hdf.py  example_metadata.py  example_rois.py  example_tree_string.py  main.py  simple_example.py
src/hdfmap/: __init__.py  dataloader_class.py  eval_functions.py  file_functions.py  hdf_loader.py  hdfmap_class.py  logging.py  nexus.py  reloader_class.py
tests/: __init__.py  create_test_files.py  test_edge_cases.py  test_file_functions.py  test_hdf_loader.py  test_hdfmap_class.py  test_many_files.py  test_nexus.py
tests/data/: 1040323.nxs  1049598.nxs  1049598.tree  i06-353130.nxs  test_files.json
