[build-system]
requires = ["setuptools >= 61.0", "wheel", "pytest", "numpy", "h5py", "hdf5plugin"]
build-backend = "setuptools.build_meta"

[project]
name = "hdfmap"
dynamic = ['version']
dependencies = [
  "numpy",
  "h5py",
  "hdf5plugin",
  "asteval",
]
requires-python = ">=3.10"
authors = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
maintainers = [
  {name = "Dan Porter", email = "dan.porter@diamond.ac.uk"},
]
description = "Map objects within a HDF5 file and create a dataset namespace"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  'nexus',
]
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering :: Physics',
  'License :: OSI Approved :: Apache Software License',
  'Development Status :: 3 - Alpha',
]

[project.urls]
Homepage = "https://github.com/DiamondLightSource/hdfmap"
Documentation = "https://diamondlightsource.github.io/hdfmap/"
Repository = "https://github.com/DiamondLightSource/hdfmap"
"Bug Tracker" = "https://github.com/DiamondLightSource/hdfmap"
Changelog = "https://github.com/DiamondLightSource/hdfmap/blob/master/README.md"

[tool.setuptools.dynamic]
version = {attr = "hdfmap.__version__"}